css/style.css
/*basic HTML page set up */
/*insert style here*/
#map {
    height: 100vh;
    width: 100vw;
    right: 0;
    float: right;
}

#sidepanel {
    height: 100vh;
    width: 28vw;
    float: left;
    position: absolute;
    background-color: rgba(255, 255, 255, 0.8);
    left: 0;
    z-index: 10000;
    padding: 0 18px;
    display:hidden;
    overflow: scroll;
    font-size: large;
}

#retrieve {
    height: 40vh;
    width: 28vw;
    float: right;
    padding: 18px;
    position: absolute;
    background-color: rgba(255, 255, 255, 0.8);
    bottom: 0;
    right: 20px;
    z-index: 10000;
    overflow: scroll;
    font-size: large;
    display:none;

}

#intro {
    height: 100vh;
    width: 100vw;
    background-color: black;
    overflow:scroll;
    color: white;
    font-family: Garamond, serif;
      
}

#h1intro {

    text-align:center;
    font-weight:bold;
}

#h2intro {

    text-align:center;
}

#fontsize{
    text-align: center;
 padding: 25px;
}

#decreaseFont{
    font-size: medium;
    
}
#increaseFont{
    font-size: larger;
   
}
#normalFont{
    font-size: large;
    

}

.fontSize{
    background-color: white;
    color: black;
    border: 2px solid #4CAF50;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    transition-duration: 0.4s;
    width: 300px;
    height: 50px;
}

.fontSize:hover {
    background-color: #4CAF50;
    /* Green */
    color: white;

}


.fontSize:focus {
    background-color: #4CAF50;
    color: white;
}



#theme{
    text-align:center;
}

/* Style the button that is used to open and close the collapsible content */
.collapsible {
    background-color: #eee;
    color: #444;
    cursor: pointer;
    position:relative;
    z-index: 10000;
    padding: 18px;
    width: 28vw;
    border: none;
    text-align: left;
    left: 0;
    top: 0;
    outline: none;
    font-size: 15px;
}

/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active,
.collapsible:hover {
    background-color: #ccc;
}

.collapsible:after {
    content: '\02795'; /* Unicode character for "plus" sign (+) */
    font-size: 13px;
    color: white;
    float: right;
    margin-left: 5px;
  }
  
  .active:after {
    content: "\2796"; /* Unicode character for "minus" sign (-) */
  }

.temp-buttons-title {
    font-weight:bold;
}

/*Leaflet popup css */
.leaflet-popup-content p {
    margin: 0;
    font-family: 11px Verdana, sans-serif;
}

/* .accordian .collapsible {
    z-index: 10000
} */

/* 
		.leaflet-container {
			height: 400px;
			width: 600px;
			max-width: 100%;
			max-height: 100%;
		} */

/*CSS for Radio Boxes*/

/* Customize the label (the container) */
.container {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-weight:normal;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* Hide the browser's default radio button */
.container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}

/* Create a custom radio button */
.checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #eee;
    border-radius: 50%;
}

#refresh-button{
    background-color: white;
    color: black;
    border: 2px solid #4CAF50;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    transition-duration: 0.4s;
}

#refresh-button:hover {
    background-color: #4CAF50;
    /* Green */
    color: white;

}

#refresh-button:focus {
    background-color: #4CAF50;
    color: white;
}

#radioState {
    background-color: white;
    color: black;
    border: 2px solid #4CAF50;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    transition-duration: 0.4s;
}

#radioState:hover {
    background-color: #4CAF50;
    /* Green */
    color: white;

}


#radioState:focus {
    background-color: #4CAF50;
    color: white;
}

#facility-type{
    padding-top: 20px;
    padding-bottom: 20px;
    font-weight:bold;
}

.facility {
    background-color: white;
    color: black;
    border: 2px solid #4CAF50;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    transition-duration: 0.4s;

}

.facility:hover {
    background-color: #4CAF50;
    /* Green */
    color: white;

}


.facility:focus {
    background-color: #4CAF50;
    color: white;
}

/* On mouse-over, add a grey background color */
.container:hover input~.checkmark {
    background-color: #ccc;
}

/* When the radio button is checked, add a blue background */
.container input:checked~.checkmark {
    background-color: #2196F3;
}

/* Create the indicator (the dot/circle - hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the indicator (dot/circle) when checked */
.container input:checked~.checkmark:after {
    display: block;
}

/* Style the indicator (dot/circle) */
.container .checkmark:after {
    top: 9px;
    left: 9px;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background: white;
}

/*Legend specific*/
#legend {
    padding: 6px 8px;
    font: Arial, Helvetica, sans-serif;

    /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);*/
    /*border-radius: 5px;*/
    line-height: 24px;
    color: #555;
}

#legend h4 {
    text-align: center;
    margin: 2px 12px 8px;
    color: #777;
}

#legend span {
    position: relative;
    margin: 3em;
    bottom: 3px;
}

#legend i {
    position: center;
    width: 18px;
    height: 18px;
    float: left;
    margin: 0 8px 0 0;
    opacity: 0.7;
}

#legend.icon {
    width: 18px;
    height: 18px;
    background-size: 18px;

}

/* CSS for autocomplete search bar */

* {
    box-sizing: border-box;
}

body {
    font: 16px Arial;

}

.autocomplete {
    /*the container must be positioned relative:*/
    position: relative;
    display: inline-block;
}

input {
    border: 1px solid transparent;
    background-color: #f1f1f1;
    padding: 10px;
    font-size: 16px;
}

input[type=text] {
    background-color: #f1f1f1;
    width: 100%;
}

input[type=submit] {
    background-color: DodgerBlue;
    color: #fff;
}

.autocomplete-items {
    position: absolute;
    border: 1px solid #d4d4d4;
    border-bottom: none;
    border-top: none;
    z-index: 99;
    /*position the autocomplete items to be the same width as the container:*/
    top: 100%;
    left: 0;
    right: 0;
}

.autocomplete-items div {
    padding: 10px;
    cursor: pointer;
    background-color: #fff;
    border-bottom: 1px solid #d4d4d4;
}

.autocomplete-items div:hover {
    /*when hovering an item:*/
    background-color: #e9e9e9;
}

.autocomplete-active {
    /*when navigating through the items using the arrow keys:*/
    background-color: DodgerBlue !important;
    color: #ffffff;
}

/*styling for zoom button placement*/
.leaflet-verticalcenter {
    position: absolute;
    z-index: 1000;
    pointer-events: none;
    top: 8%; /* possible because the placeholder's parent is the map */
    /*transform: translateY(100%); /* using the CSS3 Transform technique */
    padding-top: 10px;
}

.leaflet-verticalcenter .leaflet-control {
    margin-bottom: 10px;
}

